--- a/7/index.html
+++ b/7/index.html
@@ -19,9 +19,11 @@
       <p>Yellow Text</p>
       <div class="box inner-box">
         <p class="white-text">White Text</p>
+        <p class="green-text">White Text</p>
+        <p class="yellow-text">White Text</p>
       </div>
     </div>
   </div>
 </body>
 
-</html>
+</html> 
