--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -6,7 +6,22 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    .flag {
+      background-color: #ce1126;
+      width: 900px;
+      height: 600px;
+    }
+    p {
+      background-color: white;
+    }
+
+    div {
+      background-color: #002868;
+      position: relative;
+      width: 900px;
+      height: 400px;
+    }
+
   </style>
 </head>
 
