--- a/9.1 Flex Direction/index.html
+++ b/9.1 Flex Direction/index.html
@@ -16,7 +16,7 @@
       display: inline-flex; /*  Inline-flex because it needs to only use as much space as it needs */
       flex-direction: column;
       justify-content: flex-end;
-      align-items: center;
+      align-items: stretch;
       height: 100vh;
       width: 200px;
       
@@ -40,6 +40,7 @@
 
     .yellow {
       order: 3;
+      align-self: flex-end;
     }
 
     .green {
