--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <H1>HALLO!!!! I AM JE MOEDER</H1>
-<a href="Drum%20Kit/Drum%20Kit%20Starting%20Files/index.html">Visit W3Schools.com!</a>
+<a href="Drum%20Kit/Drum%20Kit%20Starting%20Files/index.html">Drum Kit yeah!</a>
+<a href="Drum Kit/Drum Kit Starting Files/index.html">Drum Kit yeah! (test)</a>
