--- a/Testing JQuery/index.html
+++ b/Testing JQuery/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>JQuery</title>
+    <!-- Adding Jqeury and styles.css stylesheet. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -14,6 +15,7 @@
     <button type="button" name="button">Click me please!!</button>
     <button type="button" name="button">Click me please!!</button>
 
+    <!-- Adding index.js -->
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
